Bug #27712 Single user mode. Creating logfile group and tablespace is allowed
Submitted: 9 Apr 2007 10:02 Modified: 27 Apr 2007 12:30
Reporter: Serge Kozlov Email Updates:
Status: Closed
Category:Server: ClusterDD Severity:S3 (Non-critical)
Version:5.1.18-bk OS:Linux (FC4 64bit)
Assigned to: Tomas Ulin Target Version:

[9 Apr 2007 10:02] Serge Kozlov
Description:
Creating logfile group and tablespace is allowed though other sql node is running in
single user mode.

How to repeat:
1. Run cluster with 2 sql nodes
2. Enable single user mode for first mysqld.
3. Try to create logfile group and tablespace (ndb_dd) on second mysqld.
[16 Apr 2007 9:27] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/24580

ChangeSet@1.2590, 2007-04-16 11:43:14+02:00, tomas@whalegate.ndb.mysql.com +5 -0
  Bug #27712  	Single user mode. Creating logfile group and tablespace is allowed
[26 Apr 2007 11:35] Bugs System
Pushed into 5.1.18-beta
[27 Apr 2007 12:30] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 5.1.18 changelog.