Bug #27712  	Single user mode. Creating logfile group and tablespace is allowed