storage/ndb/src/kernel/blocks/dbdict/Dbdict.cpp
@@ -14084,6 +14084,15 @@ Dbdict::execCREATE_FILE_REQ(Signal* signal){
       break;
     }
 
+    if (checkSingleUserMode(senderRef))
+    {
+      ref->errorCode = CreateFileRef::SingleUser;
+      ref->status    = 0;
+      ref->errorKey  = 0;
+      ref->errorLine = __LINE__;
+      break;
+    }
+
     Ptr<SchemaTransaction> trans_ptr;
     if (! c_Trans.seize(trans_ptr)){
       ref->errorCode = CreateFileRef::Busy;
@@ -14183,6 +14192,15 @@ Dbdict::execCREATE_FILEGROUP_REQ(Signal* signal){
     if (c_blockState != BS_IDLE){
       jam();
       ref->errorCode = CreateFilegroupRef::Busy;
+      ref->status    = 0;
+      ref->errorKey  = 0;
+      ref->errorLine = __LINE__;
+      break;
+    }
+
+    if (checkSingleUserMode(senderRef))
+    {
+      ref->errorCode = CreateFilegroupRef::SingleUser;
       ref->status    = 0;
       ref->errorKey  = 0;
       ref->errorLine = __LINE__;
@@ -14291,6 +14309,14 @@ Dbdict::execDROP_FILE_REQ(Signal* signal)
       break;
     }
 
+    if (checkSingleUserMode(senderRef))
+    {
+      ref->errorCode = DropFileRef::SingleUser;
+      ref->errorKey  = 0;
+      ref->errorLine = __LINE__;
+      break;
+    }
+
     Ptr<File> file_ptr;
     if (!c_file_hash.find(file_ptr, objId))
     {
@@ -14309,7 +14335,7 @@ Dbdict::execDROP_FILE_REQ(Signal* signal)
     Ptr<SchemaTransaction> trans_ptr;
     if (! c_Trans.seize(trans_ptr))
     {
-      ref->errorCode = CreateFileRef::Busy;
+      ref->errorCode = DropFileRef::Busy;
       ref->errorLine = __LINE__;
       break;
     }
@@ -14392,6 +14418,14 @@ Dbdict::execDROP_FILEGROUP_REQ(Signal* signal)
       break;
     }
     
+    if (checkSingleUserMode(senderRef))
+    {
+      ref->errorCode = DropFilegroupRef::SingleUser;
+      ref->errorKey  = 0;
+      ref->errorLine = __LINE__;
+      break;
+    }
+
     Ptr<Filegroup> filegroup_ptr;
     if (!c_filegroup_hash.find(filegroup_ptr, objId))
     {
@@ -14410,7 +14444,7 @@ Dbdict::execDROP_FILEGROUP_REQ(Signal* signal)
     Ptr<SchemaTransaction> trans_ptr;
     if (! c_Trans.seize(trans_ptr))
     {
-      ref->errorCode = CreateFilegroupRef::Busy;
+      ref->errorCode = DropFilegroupRef::Busy;
       ref->errorLine = __LINE__;
       break;
     }
